# bazel_cross_compile

./: .bazelrc  .style.yapf  README.md  WORKSPACE  build-all.sh  build_for_all_platform.sh  format.sh
config_settings/conditions/: BUILD
release/: BUILD
src/: BUILD  math.cc  math.h  math_ios.bazel  math_test.cc  sample.cc
src/capi/: BUILD  libmath_capi.cc  libmath_capi.h
test/: BUILD
testdata/: BUILD
