# Bazel rules for building the MathLiteC iOS static framework.
#
#   Add the build rules below to `//src/BUILD`.
#   Build the framework:
#     bazel build //src:MathLiteC_framework -c opt --ios_multi_cpus=x86_64,armv7,arm64
#   Unzip the generated framework:
#     unzip bazel-bin/src/MathLiteC_framework.zip -d /Users/path/to/MathLiteC.framework

load("@build_bazel_rules_apple//apple:ios.bzl", "ios_static_framework")
load("@build_bazel_rules_apple//apple:versioning.bzl", "apple_bundle_version")

apple_bundle_version(
    name = "MathLiteC_version",
    build_version = "0.1.0",
    short_version_string = "0.1",
)

ios_static_framework(
    name = "MathLiteC_framework",
    hdrs = ["math.h"],
    bundle_name = "MathLiteC",
    minimum_os_version = "6.0",
    version = ":MathLiteC_version",
    deps = [":math"],
)
